fix: homepage alignment issue

--- a/Prerok-Global-Client/src/index.css
+++ b/Prerok-Global-Client/src/index.css
@@ -7,4 +7,7 @@
     .wrapper {
         @apply max-w-7xl mx-auto px-2 lg:px-0
     }
+    .big-wrapper {
+        @apply max-w-[1920px] mx-auto px-2 lg:px-0
+    }
 }
